# image-to-ascii

./: .gitignore  pyproject.toml
src/: config.py  converter.py  main.py
tests/: test_converter.py
